feat-50 resolving mixed type content

--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
       })();
     </script>
     <noscript>
-      <img src="http://api.trustedform.com/ns.gif" />
+      <img src="https://api.trustedform.com/ns.gif" />
     </noscript>
   </body>
 </html>
